src/objects/EFS_App_Manager_Integration__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Endpoint__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Endpoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>EFS App Manager Integration</label>
</CustomObject>